src/components/Product/Product.module.scss
@use '../../scss/' as *;

.wrapper {
    display: block;
    margin-top: 56px;

    .title {
        @include flex(center, center, row);

        font-weight: 600;
        letter-spacing: 1px;
        user-select: none;

        .new {
            margin-left: 4px;
            align-self: flex-start;
            transform: rotate(-7deg);
        }
    }

    .rainbow {
        animation: rainbow 0.4s infinite;
    }

    @keyframes rainbow {
        0% {
            color: #fc0303;
        }
        17% {
            color: #45f52a;
        }
        34% {
            color: #2a7bf5;
        }
        51% {
            color: #2af5e4;
        }
        68% {
            color: #c92af5;
        }
        85% {
            color: #f5dd2a;
        }
        100% {
            color: #66655d;
        }
    }

    .product-list {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        gap: 2rem;
        flex-wrap: wrap;
        margin-top: 48px;

        @include tablet {
            grid-template-columns: repeat(2, 1fr);
        }

        @include mobile {
            grid-template-columns: 1fr;
        }
    }
}

.product-item {
    // border: 1px solid var(--blue);
    border-radius: 4px;
    user-select: none;

    .images {
        padding-top: 100%;
        position: relative;
        overflow: hidden;

        &:hover {
            .model-image {
                transform: translateX(-50%) scale(0);
            }

            .product-image {
                transform: translateX(-50%) scale(1);
            }
        }

        .model-image,
        .product-image {
            height: 100%;
            position: absolute;
            top: 0;
            left: 50%;
            transition: transform 0.5s ease;
        }

        .model-image {
            transform: translateX(-50%) scale(1);
        }

        .product-image {
            transform: translateX(-50%) scale(0);
        }
    }
}

.info {
    display: grid;
    grid-template-columns: 1fr;
    gap: 0.4rem;
    margin-top: 16px;
    padding-left: 16px;
    padding-right: 16px;
    text-align: center;

    .name {
        font-size: 1.4rem;
        font-weight: 600;
        color: var(--text-color);
    }

    .prices {
        @include flex(center, center, unset);

        font-size: 1.6rem;

        .new-price {
            font-weight: 600;
            margin-right: 16px;
        }

        .old-price {
            text-decoration: line-through;
            color: var(--text-color);
        }
    }
}

.detail-btn {
    width: 50%;
    height: 32px;
    font-size: 1.4rem;
    margin: 8px auto 16px;
    justify-self: center;

    @include tablet {
        width: 70%;
        height: 36px;
    }

    @include mobile {
        width: 90%;
    }
}

